--- a/index.html
+++ b/index.html
@@ -2,54 +2,68 @@
 <html lang="ca">
 <head>
   <meta charset="UTF-8">
-  <title>Regla de Ruffini – Simulador amb caselles</title>
+  <title>Regla de Ruffini</title>
   <!-- 🔹 Per fer-lo realment responsive al mòbil -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Tipografies de marca: Paytone One + Urbanist -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Paytone+One&family=Urbanist:wght@300;400;600;700&display=swap" rel="stylesheet">
+
   <style>
     :root {
-      --bg: #0b1226;
-      --panel: #0e1530;
-      --accent: #60a5fa;
-      --accent2: #34d399;
-      --text: #e5e7eb;
-      --muted: #9ca3af;
-      --danger: #f97373;
-      --border: #334155;
+      /* Paleta inspirada en el manual de marca */
+      --lima: #d5f476;        /* Verd lima - destacats / fons suau */
+      --blanc: #f9f8ef;       /* Blanc cru - targetes */
+      --fucsia: #ff3d78;      /* Fúcsia - accent principal */
+      --jade: #00a874;        /* Verd jade - accent secundari */
+      --text: #000000;        /* Text principal en negre */
+      --text2: #1f2937;       /* Text secundari gris fosc */
+      --danger: #ff3d78;      /* Fúcsia també per errors/avisos */
+      --border: #5c3a93;      /* Morat per a contorns */
+      --lila: #d5bef7;        /* Lila claret */
     }
+
     * { box-sizing: border-box; }
+
     body {
       margin: 0;
       min-height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
-      background: radial-gradient(circle at top, #111827 0, #020617 40%);
-      font-family: system-ui, -apple-system, "Segoe UI", Roboto, sans-serif;
+      background:
+        radial-gradient(circle at top left, #ffaac9 0, #d5f476 35%, #d5bef7 70%, #5c3a93 100%);
+      font-family: "Urbanist", system-ui, -apple-system, "Segoe UI", Roboto, sans-serif;
       color: var(--text);
       padding: 16px;
     }
+
     .card {
-      background: rgba(15, 23, 42, 0.95);
-      border-radius: 16px;
+      background: var(--blanc);
+      border-radius: 18px;
       padding: 20px 24px 24px;
       max-width: 950px;
       width: 100%;
-      box-shadow: 0 20px 45px rgba(0,0,0,0.5);
-      border: 1px solid rgba(148, 163, 184, 0.25);
+      box-shadow:
+        0 18px 35px rgba(0, 0, 0, 0.18),
+        0 0 0 2px rgba(0, 0, 0, 0.05);
+      border: 2px solid var(--border);
     }
 
-    /* 🔹 Logo */
+    /* 🔹 Logo capçalera */
     .logo-wrap {
       display: flex;
       justify-content: center;
-      margin-bottom: 12px;
+      margin-bottom: 20px;
     }
     .logo-wrap img {
-      max-width: 180px;
+      max-width: 200px;
       width: 100%;
       height: auto;
       display: block;
-      opacity: 0.95;
+      opacity: 0.9;
       transition: opacity 0.15s ease-out, transform 0.15s ease-out;
     }
     .logo-wrap img:hover {
@@ -57,30 +71,56 @@
       transform: translateY(-1px);
     }
 
+    /* 🔹 Logo final/imagotip */
+    .logo-footer {
+      margin-top: 35px;
+      display: flex;
+      justify-content: center;
+    }
+    .logo-footer img {
+      max-width: 50px;
+      width: 100%;
+      height: auto;
+      display: block;
+      opacity: 0.9;
+      transition: opacity 0.15s ease-out, transform 0.15s ease-out;
+    }
+    .logo-footer img:hover {
+      opacity: 1;
+      transform: translateY(-1px);
+    }
+
     h1 {
       margin: 0 0 8px;
-      font-size: 1.4rem;
+      font-size: 1.5rem;
       display: flex;
       align-items: center;
       gap: 8px;
+      font-family: "Paytone One", system-ui, sans-serif;
+      letter-spacing: 0.02em;
+      color: var(--text);
     }
     h1 span {
       display: inline-flex;
       align-items: center;
       justify-content: center;
-      width: 26px;
-      height: 26px;
+      width: 28px;
+      height: 28px;
       border-radius: 999px;
-      background: radial-gradient(circle at 30% 30%, var(--accent2), var(--accent));
+      background: var(--jade);
       font-weight: 700;
-      font-size: 0.9rem;
-      color: #0b1120;
+      font-size: 1rem;
+      color: #ffffff;
+      box-shadow: 0 0 0 2px #ffffff;
     }
+
     .subtitle {
       margin: 0 0 16px;
-      font-size: 0.9rem;
-      color: var(--muted);
+      font-size: 0.95rem;
+      color: var(--text2);
+      line-height: 1.5;
     }
+
     .grid {
       display: grid;
       grid-template-columns: minmax(0, 2.3fr) minmax(0, 2.4fr);
@@ -96,28 +136,32 @@
       display: block;
       font-size: 0.9rem;
       margin-bottom: 4px;
-      color: var(--muted);
+      color: var(--text2);
+      font-weight: 500;
     }
     input[type="number"] {
       width: 100%;
-      padding: 6px 8px;
-      border-radius: 8px;
-      border: 1px solid var(--border);
-      background: #020617;
+      padding: 8px 10px;
+      border-radius: 10px;
+      border: 1.5px solid rgba(0, 0, 0, 0.12);
+      background: #ffffff;
       color: var(--text);
       font-size: 0.9rem;
       outline: none;
-      transition: border 0.15s, box-shadow 0.15s, background 0.15s;
+      transition: border 0.15s, box-shadow 0.15s, background 0.15s, transform 0.08s;
     }
     input[type="number"]:focus {
-      border-color: var(--accent);
-      box-shadow: 0 0 0 1px rgba(96,165,250,0.6);
-      background: #020617;
+      border-color: var(--fucsia);
+      box-shadow: 0 0 0 2px rgba(255, 61, 120, 0.25);
+      background: #ffffff;
+      transform: translateY(-1px);
     }
+
     .hint {
       font-size: 0.8rem;
-      color: var(--muted);
+      color: var(--text2);
       margin-top: 2px;
+      opacity: 0.9;
     }
 
     .degree-row {
@@ -129,20 +173,21 @@
     }
     .degree-row small {
       font-size: 0.8rem;
-      color: var(--muted);
+      color: var(--text2);
     }
 
     .coef-grid-wrapper {
       margin-top: 8px;
       padding: 8px 10px;
-      border-radius: 10px;
-      background: rgba(15,23,42,0.9);
-      border: 1px solid var(--border);
+      border-radius: 12px;
+      background: #ffffff;
+      border: 1.5px solid rgba(0, 0, 0, 0.12);
     }
     .coef-grid-label {
-      font-size: 0.8rem;
-      color: var(--muted);
+      font-size: 0.85rem;
+      color: var(--text2);
       margin-bottom: 6px;
+      font-weight: 500;
     }
     .coef-grid {
       display: flex;
@@ -159,7 +204,7 @@
     }
     .coef-item span.power-label {
       font-size: 0.78rem;
-      color: var(--muted);
+      color: var(--text2);
       margin-bottom: 2px;
       text-align: center;
       display: flex;
@@ -179,31 +224,37 @@
       border: none;
       padding: 8px 18px;
       font-size: 0.9rem;
-      font-weight: 600;
+      font-weight: 700;
       cursor: pointer;
       display: inline-flex;
       align-items: center;
       gap: 6px;
-      transition: transform 0.08s ease-out, box-shadow 0.12s ease-out, background 0.15s;
+      transition:
+        transform 0.08s ease-out,
+        box-shadow 0.12s ease-out,
+        background 0.15s,
+        border 0.15s;
+      font-family: "Urbanist", system-ui, sans-serif;
     }
     .btn-primary {
-      background: linear-gradient(135deg, var(--accent), #3b82f6);
-      color: #0b1120;
-      box-shadow: 0 10px 20px rgba(37, 99, 235, 0.35);
+      background: linear-gradient(135deg, var(--fucsia), #ff7ca5);
+      color: #ffffff;
+      box-shadow: none;
     }
     .btn-primary:hover {
       transform: translateY(-1px);
-      box-shadow: 0 14px 26px rgba(37, 99, 235, 0.45);
+      box-shadow: 0 14px 22px rgba(255, 61, 120, 0.46);
     }
     .btn-secondary {
-      background: #020617;
-      color: var(--muted);
-      border: 1px solid var(--border);
+      background: #ffffff;
+      color: var(--text2);
+      border: 1.5px solid rgba(0, 0, 0, 0.15);
     }
     .btn-secondary:hover {
-      background: #020617;
-      border-color: var(--accent2);
-      color: var(--accent2);
+      background: #ffaac91f;
+      border-color: var(--fucsia);
+      color: var(--fucsia);
+      transform: translateY(-1px);
     }
 
     .pill {
@@ -211,84 +262,110 @@
       align-items: center;
       gap: 6px;
       font-size: 0.78rem;
-      padding: 4px 9px;
+      padding: 4px 10px;
       border-radius: 999px;
-      background: rgba(15, 118, 110, 0.18);
-      color: #6ee7b7;
+      background: #00a8741f; /* verd jade molt suau */
+      color: var(--jade);
       margin-bottom: 8px;
+      font-weight: 800;
+      text-transform: uppercase;
+      letter-spacing: 0.04em;
     }
 
     .results {
-      border-radius: 12px;
-      padding: 12px 14px 10px;
-      background: radial-gradient(circle at top left, rgba(56,189,248,0.18), rgba(15,23,42,0.95));
-      border: 1px solid rgba(148, 163, 184, 0.4);
+      border-radius: 14px;
+      padding: 12px 14px 42px;
+      background: #ffffff;
+      border: 1.5px solid rgba(0, 0, 0, 0.12);
       min-height: 80px;
       font-size: 0.9rem;
+      box-shadow: 0 8px 18px rgba(0, 0, 0, 0.06);
     }
     .results h2 {
       font-size: 0.95rem;
       margin: 0 0 6px;
-      color: var(--muted);
-      font-weight: 600;
+      color: var(--text2);
+      font-weight: 700;
     }
     .poly-line {
       margin: 2px 0;
-      font-family: "JetBrains Mono", "Fira Code", ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+      font-family: "JetBrains Mono", ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
       font-size: 0.9rem;
       word-wrap: break-word;
     }
     .poly-line span.label {
-      color: var(--muted);
+      color: var(--text2);
     }
     .poly-line span.value {
-      color: #f9fafb;
+      color: var(--text);
     }
     .poly-line span.emph {
-      color: var(--accent2);
-      font-weight: 600;
+      color: var(--jade);
+      font-weight: 700;
     }
 
     .ruffini-wrapper {
       margin-top: 10px;
       overflow-x: auto;
     }
-    table.ruffini {
-      border-collapse: separate;
-      border-spacing: 0;
-      margin-top: 6px;
-      font-size: 0.85rem;
-      min-width: min(100%, 540px);
-    }
-    table.ruffini th,
-    table.ruffini td {
-      padding: 4px 8px;
-      text-align: center;
-      border: 1px solid rgba(148, 163, 184, 0.45);
-      background: rgba(15, 23, 42, 0.88);
-      min-width: 40px;
-    }
-    table.ruffini th {
-      background: rgba(15, 23, 42, 0.95);
-      font-weight: 600;
-      color: var(--muted);
-    }
-    table.ruffini td.corner {
-      background: #020617;
-      font-weight: 600;
-      color: var(--muted);
-      min-width: 50px;
-    }
-    table.ruffini td.root {
-      background: rgba(30, 64, 175, 0.85);
-      font-weight: 700;
-      color: #e5e7eb;
-    }
-    table.ruffini tr.result-row td {
-      background: rgba(21, 128, 61, 0.3);
-    }
-    table.ruffini tr.mult-row td {
-      background: rgba(30, 64, 175, 0.18);
+    
+    /* 🔹 NOMÉS CANVIA A PARTIR D'AQUÍ: colors de la taula de Ruffini */
+table.ruffini {
+  border-collapse: separate;
+  border-spacing: 0;
+  margin-top: 6px;
+  font-size: 0.85rem;
+  min-width: min(100%, 540px);
+}
+table.ruffini th,
+table.ruffini td {
+  padding: 4px 8px;
+  text-align: center;
+  border: 1px solid rgba(0, 0, 0, 0.18);
+  background: #fffdf7;             /* fons molt clar, tipus paper */
+  color: var(--text2);
+  min-width: 40px;
+}
+
+/* Capçalera */
+table.ruffini th {
+  background: var(--lila);         /* lila claret de la paleta */
+  font-weight: 600;
+  color: var(--text2);
+}
+
+/* Cel·les "corner" (Taula / Coef.) */
+table.ruffini td.corner {
+  background: #faf1ff;         /* mateix to que la capçalera */
+  font-weight: 600;
+  color: var(--text2);
+  min-width: 50px;
+}
+/* Pintar la fila dels coeficients (2a fila de la taula) */
+table.ruffini tr:nth-child(2) td:not(.corner) {
+  background: #faf1ff;   /* lila molt suau */
+}
+
+/* Cel·la de l'arrel */
+table.ruffini td.root {
+  background: var(--fucsia);       /* arrel destacada en fúcsia */
+  font-weight: 700;
+  color: #ffffff;
+}
+
+/* Fila dels productes a·b */
+table.ruffini tr.mult-row td {
+  background: #f7ecff;             /* lila molt suau */
+  color: var(--text2);
+}
+
+/* Fila dels resultats (coeficients del quocient + residu) */
+table.ruffini tr.result-row td {
+  background: #f3f8d0;             /* verd lima suau per als resultats */
+  color: var(--text2);
+  font-weight: 600;
+}
+    
     }
     .tag {
       display: inline-flex;
@@ -297,9 +374,10 @@
       padding: 2px 6px;
       font-size: 0.7rem;
       border-radius: 999px;
-      background: rgba(148, 163, 184, 0.18);
-      color: var(--muted);
+      background: #d5f476;
+      color: #000000;
       margin-left: 6px;
+      font-weight: 600;
     }
 
     .error {
@@ -317,14 +395,14 @@
       }
       .card {
         padding: 16px 14px 18px;
-        border-radius: 12px;
+        border-radius: 14px;
       }
       h1 {
-        font-size: 1.15rem;
+        font-size: 1.25rem;
         flex-wrap: wrap;
       }
       .subtitle {
-        font-size: 0.85rem;
+        font-size: 0.9rem;
       }
       .degree-row {
         flex-direction: column;
@@ -356,15 +434,15 @@
     <div class="logo-wrap">
       <a href="https://www.larrelacademia.cat/" target="_blank" rel="noopener noreferrer">
         <img
-          src="https://i.ibb.co/Q7YJTwgn/PRINCIPAL-BEIGE.png"
-          alt="L'Arrel Acadèmia - Logo"
+          src="https://i.ibb.co/TDpf3BHr/PRINCIPAL-FUCSIA.png"
+          alt="L'Arrel Acadèmia - Logo principal fúcsia"
         />
       </a>
     </div>
 
     <h1>
       <span>R</span>
-      Regla de Ruffini – Divisió de polinomis
+      Regla de Ruffini
     </h1>
     <p class="subtitle">
       Tria el grau del polinomi, omple els coeficients a les caselles i el valor de <strong>a</strong> al divisor
@@ -375,7 +453,7 @@
       <!-- Panell d'entrada -->
       <div>
         <div class="pill">
-          ⚙️ Configuració del polinomi
+         ⚙️ Configuració del polinomi
         </div>
 
         <form id="ruffini-form">
@@ -433,12 +511,19 @@
         </div>
         <div class="results" id="results">
           <h2>En espera de dades…</h2>
-          <p style="margin: 4px 0 0;">
+          <p style="margin: 4px 0 0; color: var(--text2);">
             Tria el grau, omple els coeficients i el valor de <strong>a</strong> i prem
             <strong>«Aplicar Ruffini»</strong>.
           </p>
         </div>
       </div>
+    </div>
+
+    <!-- 🔹 Logo final (imagotip) -->
+    <div class="logo-footer">
+      <a href="https://www.larrelacademia.cat/" target="_blank" rel="noopener noreferrer">
+        <img src="https://i.ibb.co/PvJdJ31H/IMAGOTIP-FUCSIA.png" alt="L'Arrel Acadèmia - Imagotip fúcsia" />
+      </a>
     </div>
   </div>
 
