--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <!-- 🔹 Per fer-lo realment responsive al mòbil -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- Favicon (icona de la pestanya) -->
+  <link rel="icon" type="image/png" href="https://i.ibb.co/ZRt0f9HS/imagotip-pestanya.png">
+  
   <!-- Tipografies de marca: Paytone One + Urbanist -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -790,3 +793,4 @@ table.ruffini tr.result-row td {
   </script>
 </body>
 </html>
+
